# benchfuns

./: README.md  pyproject.toml
.github/workflows/: build-ci.yml
src/benchfuns/: __init__.py  benchfuns.py
tests/: test_benchfuns.py  test_hybrid.py
